# python-package

./: CHANGELOG.md  README.md  pyproject.toml
src/azure_eventhub_listener/: main.py
