[tool.poetry]
name = "azure-eventhub-listener"
version = "0.1.6"
description = "A listener for Azure Event Hub events."
authors = ["Sameer Chaudhari <sameervchaudhari@gmail.com>"]
license = "MIT"
homepage = "https://python-poetry.org/"

[tool.poetry.dependencies]
python = "^3.9.3"
azure-eventhub = "^5.11.0"  # Azure SDK for Event Hubs
requests = "^2.28.1"  # Example dependency

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-listener = "azure_eventhub_listener.main:main" # Entry point
